--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR /app
 # Copy package files first for better caching
 COPY package*.json ./
 
-# Install dependencies
-RUN npm ci --only=production
+# Install dependencies with npm install (more forgiving than npm ci)
+RUN npm install
 
 # Copy application code
 COPY . .
@@ -17,7 +17,10 @@ RUN npm run build
 # Create non-root user
 RUN addgroup -g 1001 -S nodejs
 RUN adduser -S nextjs -u 1001
+
+# Change ownership of necessary directories
 RUN chown -R nextjs:nodejs /app
+
 USER nextjs
 
 EXPOSE 3000
