--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,8 +1,9 @@
-# Dependencies
+# Dependencies  
 node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+# Note: package-lock.json is needed for npm ci
 
 # Production build
 .next
