Update Docker configuration to retain package-lock.json for reproducible builds and adjust Dockerfile to copy both package.json and package-lock.json. This change supports Docker builds using npm ci.

--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
+# package-lock.json - keeping this for Docker builds with npm ci
 
 # Environment files
 .env
