feat(security): implement AES-256-GCM encryption for IMAP credentials - Added secure crypto.py module with AES-256-GCM encryption - Implemented monthly key rotation with backup key storage - Added encryption_key_id field to imap_configs table - Updated API endpoints to use secure encryption/decryption - Backward compatibility with legacy base64 encoding - File-based key storage on DO droplet (lean startup approach) - Phase 1.1.1 complete: IMAP credentials now properly secured

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,6 @@ pydantic>=2.0.0
 requests==2.31.0
 imapclient>=3.0.0
 PyJWT>=2.8.0
-schedule>=1.2.0 
+schedule>=1.2.0
+# Security Dependencies
+cryptography>=41.0.0 
